# low-temperature-control

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  LICENSE  PSU_test.ipynb  README.md  docker-compose.yaml  lakeshore_testing.ipynb  noise_measure.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  response18.10-18.13.json  temperature.json  test.ipynb  turbo.json
.github/workflows/: test.yaml
apps/collector/: .env.example  .env.lab  Dockerfile  package.json
apps/heater-api/: .env.dev  .env.example  .env.lab  .gitignore  README.md  app.py  config.example.yaml  main.py  package.json  pyproject.toml
apps/heater-api/docs/: index.html  openapi.json  openapi.yaml
apps/heater-api/mocks/: gpio_mock.py  heater_mock.py
apps/heater-api/repositories/: gpio.py  gpio_heater.py  heater.py  psu.py  psu_heater.py
apps/heater-api/routers/: channels.py  config.py  dependencies.py  pid.py  temp.py
apps/heater-api/schemas/: app_config.py  channel.py  temp_control.py
apps/heater-api/services/: PID.py  channel_manager.py  config_loader.py  heater_factory.py  lgg_client.py  lifespan.py  state_store.py  temp_service.py
apps/lgg-api/: Dockerfile  README.md  package.json  pyproject.toml
apps/lgg-api/constants/: env.py
apps/lgg-api/exceptions/: lakeshore.py
apps/lgg-api/mocks/: model240.py
apps/lgg-api/routers/: dependencies.py
apps/lgg-api/routers/v1/: reading.py
apps/lgg-api/schemas/: curve.py  device.py  reading.py  shared.py
apps/ls-api/: .env.dev  .env.example  .gitignore  README.md  app.py  main.py  mapping.md  package.json  pyproject.toml
apps/ls-api/constants/: env.py
apps/ls-api/docs/: index.html  openapi.json  openapi.yaml
apps/ls-api/mocks/: curve_data.py  model240.py
apps/ls-api/routers/: __init__.py
apps/ls-api/routers/v1/: curve.py  device.py  reading.py
apps/ls-api/schemas/: curve.py  operations.py  reading.py
apps/ls-api/services/: environment.py  lakeshore.py  lifespan.py  simulator_client.py
apps/rice-shower/: .env.dev  .env.example  .env.lab  README.md  config.example.yaml  package.json  (+2 more)
docs/: multi-system-configuration-summary.md
otel/: otel-config.yaml  tempo.yaml
(+109 files in other folders)
