[project]
name = "lgg-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-camelcase>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "lakeshore>=1.8.1",
    "numpy>=2.3.3",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["autopep8>=2.3.2"]
