[project]
name = "lingangu-api"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-camelcase>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "lakeshore>=1.8.1",
    "numpy>=2.3.3",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "simulator_client",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["autopep8>=2.3.2", "pyyaml>=6.0.3"]

[tool.uv.sources]
simulator_client = { workspace = true }
